test/1.4/errors/T_WDMLAST.dml
/*
  © 2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// COMPILE-ONLY
/// WARNING WDMLAST T_WDMLAST.dml
